Update .gitignore to be clean when building from in tree
This also removes the generated files ltmain.sh and missing, as the
build process normally symlinks them to a random location in the host
filesystem.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Compiled source #
+# Compiled source #
 ###################
 *.com
 *.class
@@ -13,3 +13,34 @@ Makefile.in
 Makefile
 *.log
 
+# Libtool artifacts
+.deps
+.libs
+/libtool
+
+# Configure artifacts
+/include/config.h
+/aclocal.m4
+/autom4te.cache/
+/config.status
+/configure
+/config/compile
+/config/depcomp
+/config/install-sh
+/config/test-driver
+/config/ltmain.sh
+/config/missing
+/include/log4cpp/config.h
+/log4cpp-config
+/log4cpp.pc
+/log4cpp.spec
+
+# Doxygen artifacts
+/doc/Doxyfile
+/doc/html/api/
+/doc/man/
+
+# Misc
+/include/stamp-h1
+/tests/testbench
+/tests/testmain
